y a de l avancement mais c pas encore ca; faut que les users soit dans la base de donner.

--- a/public/styles.css
+++ b/public/styles.css
@@ -1193,6 +1193,10 @@ video {
   text-transform: uppercase;
 }
 
+.lowercase {
+  text-transform: lowercase;
+}
+
 .leading-tight {
   line-height: 1.25;
 }
