--- a/src/frontend/styles/input.css
+++ b/src/frontend/styles/input.css
@@ -34,10 +34,30 @@ html {
     top: 20px;
 	opacity: 0;
 }
+.loader {
+	width: 80px;
+	height: 70px;
+	border: 5px solid #000;
+	padding: 0 8px;
+	box-sizing: border-box;
+	background:
+	linear-gradient(lime 0 0) 0    0/8px 20px,
+	linear-gradient(lime 0 0) 100% 0/8px 20px,
+	radial-gradient(farthest-side,lime 90%,#0000) 0 5px/8px 8px content-box,
+	#000;
+	background-repeat: no-repeat; 
+	animation: l3 2s infinite linear;
+	opacity: 65%
+}
+@keyframes l3{
+	25% {background-position: 0 0   ,100% 100%,100% calc(100% - 5px)}
+	50% {background-position: 0 100%,100% 100%,0    calc(100% - 5px)}
+	75% {background-position: 0 100%,100%    0,100% 5px}
+}
 
 body {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	background: #f5f5f5;
+	background-color: black;
 	min-height: 100vh;
 }
 
